Improve affiliate CTAs with emotional benefit-driven copy

--- a/47000-saved-one-call.html
+++ b/47000-saved-one-call.html
@@ -439,7 +439,7 @@
                 <li><strong>Save the number:</strong> 1-800-985-3059 in your phone as "Medical Bill Help"</li>
                 <li><strong>Check old bills:</strong> Anything from 2022 or later might be illegal</li>
                 <li><strong>Never pay first:</strong> Always verify bills are legal before paying</li>
-                <li><strong>Consider alternatives:</strong> Like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> to avoid the game entirely</li>
+                <li><strong>Consider alternatives:</strong> Like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> to avoid the game entirely</li>
             </ol>
             
             <h2>The Bottom Line</h2>
