--- a/MASTER_TEMPLATE.html
+++ b/MASTER_TEMPLATE.html
@@ -293,7 +293,7 @@
         <div class="cta-box">
             <h3>Looking for an Alternative?</h3>
             <p>Many self-employed people are switching to direct primary care for predictable costs.</p>
-            <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" class="cta-button">Learn About MyPhysicianPlan →</a>
+            <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" class="cta-button">Stop Paying Insurance Prices for Cash Care - See Plans → →</a>
         </div>
         
         <!-- MORE CONTENT -->
