--- a/appendectomy-lottery.html
+++ b/appendectomy-lottery.html
@@ -408,13 +408,13 @@ Charity care possible</p>
 <strong>With insurance: $14,600 (non-negotiable)</strong></p>
 <p>I saved $3,400 by paying $16,800 in annual premiums. That math doesn't math.</p>
 <h3>What If I'd Used Alternative Coverage?</h3>
-<p>Services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> couldn't help with emergency surgery, but they could have handled all my follow-up care for a flat monthly rate instead of per-visit charges.</p>
+<p>Services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> couldn't help with emergency surgery, but they could have handled all my follow-up care for a flat monthly rate instead of per-visit charges.</p>
 <p>Post-surgery I needed:
 <ul><li>4 follow-up visits: $200 each = $800</li>
 <li>Wound care supplies: $340</li>
 <li>Lab work: $400</li>
 </ul>
-<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> would have covered all that for their flat fee of ~$150/month instead of $1,540 in follow-up costs.</p>
+<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> would have covered all that for their flat fee of ~$150/month instead of $1,540 in follow-up costs.</p>
 <h2>The Recovery Bill Shock</h2>
 <p>The surgery was just the beginning:</p>
 <p><strong>Week 1 Post-Op:</strong>
@@ -464,7 +464,7 @@ I pay $16,800/year in premiums and still had to pay $14,600 for emergency surger
 <li><strong>Consider medical tourism</strong> (if not emergency)</li>
 <li><strong>Negotiate everything</strong> (while recovering from surgery)</li>
 <li><strong>Look into assistance programs</strong> (if you qualify)</li>
-<li><strong>Use <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> for follow-ups</strong> (save on post-op care)</li></p>
+<li><strong>Use <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> for follow-ups</strong> (save on post-op care)</li></p>
 <h2>The Bottom Line</h2>
 <p>In America's healthcare lottery, having your appendix removed with "good" insurance means:
 <ul><li>You pay: $14,600</li>
