--- a/coinsurance-trap.html
+++ b/coinsurance-trap.html
@@ -402,14 +402,14 @@ I still paid: A car's worth of money</p>
 <li>You pay forever</li>
 </ul>
 <h2>The Alternative to Coinsurance Chaos</h2>
-<p>This is where services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> make sense for routine care.</p>
-<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>:
+<p>This is where services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> make sense for routine care.</p>
+<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a>:
 <ul><li>No coinsurance calculations</li>
 <li>No percentage math</li>
 <li>One flat rate</li>
 <li>You know exactly what you'll pay</li>
 </ul>
-<p>For major medical events, you still need traditional insurance. But for the 90% of healthcare that's routine, <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> removes the coinsurance confusion.</p>
+<p>For major medical events, you still need traditional insurance. But for the 90% of healthcare that's routine, <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> removes the coinsurance confusion.</p>
 <h2>The Psychology of "Only" 20%</h2>
 <p>Insurance companies are masters of framing:</p>
 <p>"You only pay 20%" sounds so much better than:
