--- a/december-income-panic.html
+++ b/december-income-panic.html
@@ -361,7 +361,7 @@ That check you deposited December 28th? It might clear December 31st. And that c
 Hiding income illegally is fraud. Delaying it legally is tax planning. Know the difference.</p>
 <h2>The Real Solution Nobody Talks About</h2>
 <p>Look, this annual December panic is exhausting. Every year, I'm playing this ridiculous game of "don't make too much money." It's insane that our healthcare system punishes success.</p>
-<p>That's why I'm seriously considering alternatives for 2025. A friend switched to <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> and completely escaped this nightmare.</p>
+<p>That's why I'm seriously considering alternatives for 2025. A friend switched to <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> and completely escaped this nightmare.</p>
 <p>Here's why it might be the answer:
 <ul><li>No income limits or subsidy cliffs</li>
 <li>Same price whether you make $30k or $300k</li>
@@ -395,14 +395,14 @@ Hiding income illegally is fraud. Delaying it legally is tax planning. Know the 
 <p>That means this December might be your last chance to make moves before the rules get even worse.</p>
 <h2>My Decision for 2025</h2>
 <p>I'm done with this game. After this December scramble, I'm either:
-<li>Switching to <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> to escape the cliff entirely</li>
+<li>Switching to <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> to escape the cliff entirely</li>
 <li>Restructuring my business as an S-Corp for better control</li>
 <li>Moving to a state with better options</li></p>
 <p>Because hiding from success is no way to run a business.</p>
 <h2>The Bottom Line</h2>
 <p>It's December 15th. You have 16 days to save thousands of dollars. Every day you wait is money lost.</p>
 <p>Check your income. Make your moves. Save your subsidies.</p>
-<p>And maybe, just maybe, consider whether playing this game every December is worth it, or if alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> make more sense for your sanity and your business.</p>
+<p>And maybe, just maybe, consider whether playing this game every December is worth it, or if alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> make more sense for your sanity and your business.</p>
 <p>Because you should be celebrating your success in December, not hiding from it.</p>
 <p>---</p>
 <p><em>Are you scrambling to stay under the subsidy cliff this December? What moves are you making? Share your strategies below - we're all in this together.</em></p>
