--- a/f1-student-insurance.html
+++ b/f1-student-insurance.html
@@ -506,7 +506,7 @@
         <p>If I could do it over, I'd:</p>
         <ol>
             <li>Skip university insurance</li>
-            <li>Sign up for <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> immediately</li>
+            <li>Sign up for <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> immediately</li>
             <li>Add cheap catastrophic coverage</li>
             <li>Save the difference ($2,000+/year)</li>
         </ol>
@@ -518,7 +518,7 @@
         <ol>
             <li>Calculate what you're currently paying for healthcare</li>
             <li>Check if your university allows insurance waivers</li>
-            <li>Get a quote from <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a></li>
+            <li>Get a quote from <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a></li>
             <li>Join F-1 student groups to share experiences and tips</li>
         </ol>
         
