--- a/february-problem.html
+++ b/february-problem.html
@@ -406,8 +406,8 @@ Humiliating. Raised $732. Helpful but not enough.</p>
 <h3>Medication Rationing</h3>
 Cut blood pressure pills in half to make them last. Dangerous but what choice did I have?</p>
 <h3>Direct Primary Care Alternative</h3>
-Looked into <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>. For $150/month, unlimited primary care visits. No deductible. Would have saved me thousands on follow-ups.</p>
-<p>If I'd had <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> for routine care and catastrophic insurance just for emergencies, February would have been manageable.</p>
+Looked into <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a>. For $150/month, unlimited primary care visits. No deductible. Would have saved me thousands on follow-ups.</p>
+<p>If I'd had <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> for routine care and catastrophic insurance just for emergencies, February would have been manageable.</p>
 <h2>The Psychology of February Broke</h2>
 <h3>The Guilt</h3>
 "If only I hadn't gotten sick in January..."
@@ -443,7 +443,7 @@ This is my life now. Forever in medical debt. Forever afraid of getting sick.</p
 <h2>Survival Guide for February Broke</h2>
 <p><li><strong>Negotiate everything</strong> - Hospitals will reduce bills if you're broke enough</li>
 <li><strong>Apply for financial aid</strong> - Every hospital has a program</li>
-<li><strong>Consider <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a></strong> - Flat rate for ongoing care</li>
+<li><strong>Consider <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a></strong> - Flat rate for ongoing care</li>
 <li><strong>Use GoodRx</strong> - Sometimes cheaper than insurance</li>
 <li><strong>Delay non-emergency care</strong> - Terrible advice but financial reality</li></p>
 <h2>The Bottom Line</h2>
