--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <section class="hero">
         <h1>Escape the Healthcare Cost Trap</h1>
         <p>Discover how self-employed Americans are saving $10,000+ per year on healthcare without sacrificing quality care.</p>
-        <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" class="cta-button">Learn About MyPhysicianPlan →</a>
+        <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" class="cta-button">Stop Paying Insurance Prices for Cash Care - See Plans → →</a>
     </section>
     
     <!-- Alert Box -->
