--- a/quarterly-tax-planning.html
+++ b/quarterly-tax-planning.html
@@ -464,7 +464,7 @@
 <li>Sacred money - never borrowed</li>
 </ul>
 <h2>The Alternative for Quarterly Tax Chaos</h2>
-<p>When you're juggling quarterly taxes, monthly premiums, and the subsidy cliff, something simpler starts looking attractive. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> removes one variable from the equation.</p>
+<p>When you're juggling quarterly taxes, monthly premiums, and the subsidy cliff, something simpler starts looking attractive. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> removes one variable from the equation.</p>
 <p>Why it helps with quarterly planning:
 <ul><li>Fixed monthly cost</li>
 <li>No income calculations</li>
@@ -472,7 +472,7 @@
 <li>No April surprises</li>
 <li>Same price whether you have a huge Q4 or terrible Q1</li>
 </ul>
-<p>For self-employed people drowning in financial complexity, eliminating the healthcare variable with <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> can simplify everything else.</p>
+<p>For self-employed people drowning in financial complexity, eliminating the healthcare variable with <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> can simplify everything else.</p>
 <h2>Your Quarterly Survival Checklist</h2>
 <h3>Every Quarter, Calculate:</h3>
 <ul><li>[ ] Quarterly tax owed</li>
@@ -523,7 +523,7 @@
 <h2>The Bottom Line</h2>
 <p>Quarterly taxes and the subsidy cliff create a deadly combination. You're not just managing income - you're managing timing, cash flow, and multiple government calculations that can all blow up simultaneously.</p>
 <p>The successful self-employed don't wing it. They plan quarterly, track monthly, and adjust constantly.</p>
-<p>Or they simplify with alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> and remove one variable from the equation.</p>
+<p>Or they simplify with alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> and remove one variable from the equation.</p>
 <p>Because when Q4 2026 arrives and you're staring at the cliff while calculating quarterly taxes, you'll wish you had planned better.</p>
 <p>The quarterly tax calendar doesn't care about your health insurance. The subsidy cliff doesn't care about your tax payments. But both can destroy you.</p>
 <p>Plan accordingly.</p>
