--- a/bank-account-frozen.html
+++ b/bank-account-frozen.html
@@ -401,7 +401,7 @@
         <p>Keep 6-12 months of expenses in an account at a different bank, ideally in another state.</p>
         
         <p><strong>4. Get Transparent Healthcare Coverage</strong></p>
-        <p>This is where <a href="https://myphysicianplan.com/a/2147501440/?utm_source=dailyspark&utm_medium=article&utm_campaign=bank-freeze" target="_blank">MyPhysicianPlan</a> becomes crucial. With fixed monthly costs, no deductibles, and transparent pricing, you know exactly what healthcare will cost. No surprises, no collections, no frozen accounts.</p>
+        <p>This is where <a href="https://myphysicianplan.com/a/2147501440/?utm_source=dailyspark&utm_medium=article&utm_campaign=bank-freeze" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> becomes crucial. With fixed monthly costs, no deductibles, and transparent pricing, you know exactly what healthcare will cost. No surprises, no collections, no frozen accounts.</p>
         
         <div class="cta-box">
             <h3>Stop One Medical Bill From Destroying Your Business</h3>
