--- a/cash-vs-insurance.html
+++ b/cash-vs-insurance.html
@@ -405,14 +405,14 @@ High prices help you hit your deductible faster, making you feel like insurance 
 <h3>Reason 4: Hidden Rebates</h3>
 Insurance companies get rebates from drug manufacturers you never see. Higher prices = higher rebates = higher profits.</p>
 <h2>The Direct Primary Care Alternative</h2>
-<p>This is where services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> make sense. </p>
+<p>This is where services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> make sense. </p>
 <p>They operate on transparent cash prices:
 <ul><li>No insurance billing</li>
 <li>No inflated charges</li>
 <li>No surprise bills</li>
 <li>One flat monthly rate</li>
 </ul>
-<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>, you know exactly what you'll pay. No games. No "insurance price" vs "cash price." Just honest, transparent healthcare costs.</p>
+<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a>, you know exactly what you'll pay. No games. No "insurance price" vs "cash price." Just honest, transparent healthcare costs.</p>
 <h2>The Cash Price Resources That Save Thousands</h2>
 <h3>For Medications:</h3>
 <ul><li><strong>GoodRx.com</strong> - Compare pharmacy prices</li>
@@ -451,7 +451,7 @@ Insurance companies get rebates from drug manufacturers you never see. Higher pr
 <p>You're literally penalized for having insurance.</p>
 <h2>My New Strategy: The Hybrid Approach</h2>
 <h3>For Routine Care:</h3>
-Use cash prices or <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>. Save thousands.</p>
+Use cash prices or <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a>. Save thousands.</p>
 <h3>For Catastrophic Events:</h3>
 Keep high-deductible insurance for true emergencies where you can't negotiate.</p>
 <h3>The Math:</h3>
