--- a/high-deductible-reality.html
+++ b/high-deductible-reality.html
@@ -457,7 +457,7 @@
         <p>High-deductible plans are insurance in name only. You're paying hundreds monthly for the privilege of paying thousands more when you actually need care.</p>
         <p>That's not insurance. That's a scam with a tax deduction.</p>
         <p>Find alternatives. Get creative. Network with other self-employed people. Because waiting for the system to fix itself while paying $15,000/year for nothing is the definition of insanity.</p>
-        <p>Whether it's <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> for everyday care, medical tourism for procedures, or creative insurance structures, we're finding ways around a system designed to exploit us.</p>
+        <p>Whether it's <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> for everyday care, medical tourism for procedures, or creative insurance structures, we're finding ways around a system designed to exploit us.</p>
         <p>Your health AND your business depend on finding a better way.</p>
         
         <div class="disclaimer">
