--- a/part-time-trap.html
+++ b/part-time-trap.html
@@ -407,7 +407,7 @@ If you need quick cash:
 <p>At least it builds your business resume.</p>
 <h3>Alternative #3: Fix Healthcare First</h3>
 Instead of working for benefits, get affordable coverage:</p>
-<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> costs $75-150/month with:
+<p><a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> costs $75-150/month with:
 <ul><li>No deductibles</li>
 <li>No income limits</li>
 <li>No subsidy cliffs</li>
@@ -465,7 +465,7 @@ All within your business:
 <li>Teaching</li>
 </ul>
 <h3>Find Better Healthcare</h3>
-<ul><li>Direct primary care like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a></li>
+<ul><li>Direct primary care like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a></li>
 <li>Health sharing ministries</li>
 <li>Catastrophic + cash payments</li>
 <li>Medical tourism planning</li>
