--- a/preventive-care-lie.html
+++ b/preventive-care-lie.html
@@ -415,14 +415,14 @@
 <p><strong>Japan:</strong> Prevention is healthcare. No distinction.</p>
 <p><strong>USA:</strong> Only these 47 specific services under these 193 specific conditions on alternating Tuesdays if you haven't eaten gluten.</p>
 <h2>The Direct Primary Care Difference</h2>
-<p>This is where <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> makes sense. </p>
-<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a>:
+<p>This is where <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> makes sense. </p>
+<p>With <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a>:
 <ul><li>Annual visits include whatever you need to discuss</li>
 <li>No surprise billing for asking questions</li>
 <li>Actual preventive care, not insurance-defined prevention</li>
 <li>One flat rate whether you mention symptoms or not</li>
 </ul>
-<p>Traditional insurance punishes you for being thorough about your health. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> encourages it.</p>
+<p>Traditional insurance punishes you for being thorough about your health. <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> encourages it.</p>
 <h2>How to Game the "Free" Visit System</h2>
 <h3>The Two-Visit Strategy:</h3>
 <li>First visit: ONLY do free screening, say NOTHING about symptoms</li>
