--- a/spouse-job-trap.html
+++ b/spouse-job-trap.html
@@ -359,7 +359,7 @@ Convert your business to S-Corp. Pay yourself W-2 wages. Company pays your healt
 <h3>Immediate Change: Switching Our Coverage</h3>
 We bit the bullet and joined her employer plan. It's worse coverage for more money, but at least it's pre-tax through her employer.</p>
 <h3>Long-term Solution: Exploring Alternatives</h3>
-I discovered <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> which sidesteps this whole mess:
+I discovered <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> which sidesteps this whole mess:
 <ul><li>Not traditional insurance, so different tax treatment</li>
 <li>Costs less than our current combined coverage</li>
 <li>No eligibility complications with spouse's employer</li>
@@ -418,7 +418,7 @@ Spouse's gross income
 <li>"What alternatives exist to traditional insurance?"</li>
 <li>"Can we use different types of coverage?"</li>
 <li>"What about health sharing ministries?"</li>
-<li>"How does <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> compare?"</li></p>
+<li>"How does <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> compare?"</li></p>
 <h2>The Warning Nobody Gives You</h2>
 <p>The self-employed health insurance deduction is worth $3,000-8,000 per year in tax savings for most people.</p>
 <p>One wrong move – like your spouse taking the wrong job – and it vanishes.</p>
@@ -429,7 +429,7 @@ Spouse's gross income
 <p>If I could go back:</p>
 <p><li><strong>We'd have consulted our CPA before she applied</strong></li>
 <li><strong>Negotiated contractor status instead of employee</strong></li>
-<li><strong>Looked into <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a> earlier</strong></li>
+<li><strong>Looked into <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a> earlier</strong></li>
 <li><strong>Calculated the REAL value of the job</strong></li>
 <li><strong>Structured our businesses differently</strong></li></p>
 <p>The second income seemed like security. Instead, it became a tax trap that cost us more than she earned.</p>
@@ -444,7 +444,7 @@ Spouse's gross income
 <ul><li>Check if you can waive during open enrollment</li>
 <li>Calculate if it's worth keeping the job</li>
 <li>Consider restructuring your business</li>
-<li>Explore alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener">MyPhysicianPlan</a></li>
+<li>Explore alternatives like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a></li>
 </ul>
 <p>Don't let a $15/hour job cost you $18,000 like it did us.</p>
 <p>---</p>
