Add internal linking to key articles

--- a/10000-deductible-reality.html
+++ b/10000-deductible-reality.html
@@ -706,7 +706,16 @@
         <p>The high-deductible trap only works if you stay in it. Your health is too important and your money too valuable to keep feeding a system that doesn't serve you.</p>
         
         <p>It's time to stop playing their game and start playing your own.</p>
-    </article>
+    <div style="background: #f8f9fa; padding: 2rem; border-radius: 10px; margin: 2rem 0;">
+<h3 style="margin-bottom: 1rem; color: #1a1a2e;">Related Articles:</h3>
+<ul style="list-style: none; padding: 0;">
+<li style="margin-bottom: 0.5rem;">📄 <a href="/high-deductible-reality.html" style="color: #667eea; font-weight: bold;">High Deductible Health Plans Exposed</a></li>
+<li style="margin-bottom: 0.5rem;">📄 <a href="/never-hit-deductible-trap.html" style="color: #667eea; font-weight: bold;">The "Never Hit Deductible" Trap</a></li>
+<li style="margin-bottom: 0.5rem;">📄 <a href="/out-of-pocket-myth.html" style="color: #667eea; font-weight: bold;">Out-of-Pocket Maximum Myth</a></li>
+</ul>
+</div>
+
+</article>
     
     <!-- Professional Footer -->
     <footer>
