--- a/emergency-room-bankruptcy.html
+++ b/emergency-room-bankruptcy.html
@@ -951,7 +951,16 @@
         <p>Until then, you need alternatives. Whether through telemedicine, concierge medicine, direct primary care, or transparent pricing services like <a href="https://www.awin1.com/cread.php?awinmid=114664&awinaffid=2516221&ued=https://myphysicianplan.com" target="_blank" rel="noopener" style="color: #667eea; font-weight: bold;">See Real Healthcare Pricing (No Deductibles) →</a>, you deserve healthcare that doesn't bankrupt you for seeking emergency care.</p>
         
         <p>Because at the end of the day, if going to the emergency room creates a financial emergency, the healthcare system isn't working. It's just working you over.</p>
-    </article>
+    <div style="background: #f8f9fa; padding: 2rem; border-radius: 10px; margin: 2rem 0;">
+<h3 style="margin-bottom: 1rem; color: #1a1a2e;">Related Articles:</h3>
+<ul style="list-style: none; padding: 0;">
+<li style="margin-bottom: 0.5rem;">📄 <a href="/5000-er-bill.html" style="color: #667eea; font-weight: bold;">$5,000 ER Bill</a></li>
+<li style="margin-bottom: 0.5rem;">📄 <a href="/emergency-room-trap.html" style="color: #667eea; font-weight: bold;">Emergency Room Trap</a></li>
+<li style="margin-bottom: 0.5rem;">📄 <a href="/bank-account-frozen.html" style="color: #667eea; font-weight: bold;">Bank Account Frozen by Medical Bills</a></li>
+</ul>
+</div>
+
+</article>
     
     <!-- Professional Footer -->
     <footer>
