--- a/5000-er-bill.html
+++ b/5000-er-bill.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-809NFNY2M5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-809NFNY2M5');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"$5,000 Emergency Room Bill AFTER Insurance" - The Self-Employed Healthcare Scam Nobody Warns You About - DailySpark</title>
